# code-hub

./: .env.example  METADATA.json  README.md  USAGE.md  pyproject.toml  requirements.txt  run.py
code_hub/: __init__.py  __main__.py  claude_wrapper.py  cli.py  config.py  generator.py  indexer.py  models.py  scanner.py  scheduler.py  server.py  vectorstore.py
code_hub/prompts/: __init__.py  metadata.txt  readme.txt  usage.txt
code_hub/templates/: admin.html  base.html  browse.html  deep_search.html  file_view.html  files.html  index.html  project.html  project_stats.html  search.html
tests/: test_admin.py  test_commits.py  test_search.py
