[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-hub"
version = "1.0.0"
description = "A self-documenting code project management system using Claude Code"
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.11"
authors = [
    { name = "Philip Orange", email = "git@philiporange.com" }
]
keywords = [
    "code-management",
    "documentation",
    "claude",
    "ai",
    "search",
    "vector-search",
    "rag"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "peewee>=3.17.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "click>=8.1.0",
    "rich>=13.0.0",
    "markdown>=3.5.0",
    "pygments>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
code-hub = "code_hub.cli:cli"

[project.urls]
Homepage = "https://github.com/philiporange/code-hub"
Documentation = "https://github.com/philiporange/code-hub#readme"
Repository = "https://github.com/philiporange/code-hub"

[tool.hatch.build.targets.wheel]
packages = ["code_hub"]

[tool.hatch.build.targets.sdist]
include = [
    "code_hub/**/*.py",
    "code_hub/templates/**/*",
    "code_hub/static/**/*",
    "code_hub/prompts/**/*",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
